--- a/src/main/webapp/app/entities/product/product.component.html
+++ b/src/main/webapp/app/entities/product/product.component.html
@@ -21,47 +21,13 @@
     </div>
 
 
-
-
     <div *ngIf="products">
-        <!--<div class="mb-2 d-flex justify-content-end align-items-center">
-            <span class="mx-2 col-1">Sort by</span>
-            <div [(ascending)]="reverse" [(predicate)]="predicate" [callback]="transition.bind(this)" class="btn-group"
-                 jhiSort role="group">
-                <button class="btn btn-light" jhiSortBy="name" +
 
+        <span class="mr-2 col-2">Filter by name</span>
+        <input type="search" class="form-control" [(ngModel)]="filter">
 
-
-                        type="button">
-      <span class="d-flex">
-        <span jhiTranslate="storeApp.product.name">Name</span>&nbsp;
-        <fa-icon [icon]="'sort'"></fa-icon>
-      </span>
-                </button>
-                <button class="btn btn-light" jhiSortBy="price" type="button">
-      <span class="d-flex">
-        <span jhiTranslate="storeApp.product.price">Price</span>&nbsp;
-        <fa-icon [icon]="'sort'"></fa-icon>
-      </span>
-                </button>
-                <button class="btn btn-light" jhiSortBy="size" type="button">
-<span class="d-flex">
-        <span jhiTranslate="storeApp.product.size">Size</span>&nbsp;
-        <fa-icon [icon]="'sort'"></fa-icon>
-      </span>
-                </button>
-                <button class="btn btn-light" jhiSortBy="productCategory.id"
-                        type="button">
-      <span class="d-flex">
-        <span jhiTranslate="storeApp.product.productCategory">Product
-          Category</span>&nbsp;
-        <fa-icon [icon]="'sort'"></fa-icon>
-      </span>
-                </button>
-            </div>
-        </div>-->
         <div class="list-group">
-            <a *ngFor="let product of products; trackBy: trackId"
+            <a *ngFor="let product of (products | pureFilter:filter:'name'); trackBy: trackId"
                class="list-group-item list-group-item-action flex-column align-items-start">
 
                 <div class="row">
