--- a/src/main/webapp/app/entities/order-item/order-item-update.component.html
+++ b/src/main/webapp/app/entities/order-item/order-item-update.component.html
@@ -70,16 +70,22 @@
                     <label class="form-control-label" jhiTranslate="storeApp.orderItem.product" for="field_product">Product</label>
                     <select class="form-control" id="field_product" name="product" formControlName="product">
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="productOption.id === editForm.get('product')!.value?.id ? editForm.get('product')!.value : productOption" *ngFor="let productOption of products; trackBy: trackById">{{ productOption.id }}</option>
+                        <option [ngValue]="productOption.id === editForm.get('product')!.value?.id ? editForm.get('product')!.value : productOption" *ngFor="let productOption of products; trackBy: trackById">{{ productOption.name }}</option>
                     </select>
                 </div>
 
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="storeApp.orderItem.order" for="field_order">Order</label>
                     <select class="form-control" id="field_order" name="order" formControlName="order">
-                        <option [ngValue]="null"></option>
-                        <option [ngValue]="productOrderOption.id === editForm.get('order')!.value?.id ? editForm.get('order')!.value : productOrderOption" *ngFor="let productOrderOption of productorders; trackBy: trackById">{{ productOrderOption.id }}</option>
+                        <option *ngIf="!editForm.get('order')!.value" [ngValue]="null" selected></option>
+                        <option [ngValue]="productOrderOption.id === editForm.get('order')!.value?.id ? editForm.get('order')!.value : productOrderOption" *ngFor="let productOrderOption of productorders; trackBy: trackById">{{ productOrderOption.code }}</option>
                     </select>
+                </div>
+                <div *ngIf="editForm.get('order')!.invalid && (editForm.get('order')!.dirty || editForm.get('order')!.touched)">
+                    <small class="form-text text-danger"
+                           *ngIf="editForm.get('order')?.errors?.required" jhiTranslate="entity.validation.required">
+                        This field is required.
+                    </small>
                 </div>
             </div>
 
