--- a/src/main/webapp/app/entities/product/product.component.html
+++ b/src/main/webapp/app/entities/product/product.component.html
@@ -46,7 +46,7 @@
                             <small *ngIf="product.productCategory">
                                 <a [routerLink]="['/product-category', product
                 .productCategory?.id, 'view']">
-                                    {{ product.productCategory?.id }}
+                                    {{ product.productCategory?.name }}
                                 </a>
                             </small>
                             <div *jhiHasAnyAuthority="'ROLE_ADMIN'">
