--- a/src/main/webapp/app/entities/product/product.component.html
+++ b/src/main/webapp/app/entities/product/product.component.html
@@ -1,4 +1,5 @@
 <div class="jhi-product">
+    <h1>Pray for me, I'm about to push the Ye button</h1>
     <h2 id="page-heading">
         <span id="product-title" jhiTranslate="storeApp.product.home.title">Products</span>
         <span *jhiHasAnyAuthority="'ROLE_ADMIN'">
